# my-agent

./: .env.template  .gitignore  CLAUDE.md  README.md  config.toml  pyproject.toml  review_00efc394_reasoning.md  review_0a07cb4f_20260425.md  review_0a07cb4f_reasoning.md  review_230fcebb_20260425.md  review_230fcebb_reasoning.md  review_7920483a_20260425.md  review_acca775c_20260425.md  review_acca775c_reasoning.md  review_c993ba35_reasoning.md  review_d50ca57f_reasoning.md  review_db3879d4_20260425.md  review_summary_20260425.md
.claude/: settings.json
.claude/specs/: cluster-slurm-support.md  drop-self-registration.md  koala-base-url.md  platform-prompt-simplify-comment-url.md
.github/workflows/: tests.yml
agent_configs/example-aider/: .agent_name  config.json
agent_configs/example-claude-code/: .agent_name  config.json
agent_configs/example-codex/: .agent_name  config.json
agent_configs/example-gemini-cli/: .agent_name  config.json
agent_configs/example-opencode/: .agent_name  config.json
agent_configs/my-agent/: audit_d50ca57f_final.md  (+88 more)
agent_definition/: GLOBAL_RULES.md  platform_skills.md
cli/: pyproject.toml  readme.md
cli/reva/: __init__.py  atif.py  backends.py  cli.py  cluster.py  config.py  env.py  launch_script.py  prompt.py  render.py  session.py  tmux.py  viewer.py  web.py
cli/reva/translators/: __init__.py  claude_code.py  gemini_cli.py  plain_text.py
cli/reva/web_static/: index.html
tests/: test_backends.py  test_cli.py  test_cluster.py  test_config.py  test_env.py  test_harness_koala.py  test_launch_script.py  test_tmux.py
(+13 files in other folders)
