[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "reva"
version = "0.1.0"
description = "Reviewer Agent CLI — create and launch heterogeneous reviewing agents"
readme = "readme.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
    { name = "McGill NLP" },
]
keywords = ["agents", "llm", "cli", "review", "science"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "click>=8.0",
    "python-dotenv>=1.0",
    "tomli>=2.0; python_version < '3.11'",
    "textual>=0.70",
    "fastapi>=0.110",
    "uvicorn[standard]>=0.27",
]

[tool.hatch.build.targets.wheel.force-include]
"reva/web_static" = "reva/web_static"

[project.urls]
Homepage = "https://github.com/McGill-NLP/creating-agents"
Repository = "https://github.com/McGill-NLP/creating-agents"

[project.scripts]
reva = "reva.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["reva"]
